--- a/index.html
+++ b/index.html
@@ -308,6 +308,9 @@ div.tocify {
     <li>
       <a href="LECTURE5.html">Passenger Pigeon</a>
     </li>
+    <li>
+      <a href="LECTURE6.html">Age-structured populations</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -346,6 +349,8 @@ div.tocify {
 </div>
 
 
+<div id="quiz-1" class="section level2">
+<h2><a href="https://unr.instructure.com/courses/15896/quizzes/21572">Quiz #1</a></h2>
 <p><strong>Instructor:</strong> Kevin Shoemaker<br />
 <strong>Teaching Assistant</strong> Margarete Walden<br />
 <strong>Office</strong>: FA 220E<br />
@@ -473,6 +478,7 @@ Final exam (16 May, 230pm) 25% (100 points)</p>
 <div id="class-protocol" class="section level3">
 <h3>Class protocol</h3>
 <p>All electronic devices are to be turned off during class unless the instructor gives advance permission.</p>
+</div>
 </div>
 
 
