--- a/schedule.html
+++ b/schedule.html
@@ -211,6 +211,9 @@ $(document).ready(function () {
     <li>
       <a href="LECTURE5.html">Passenger Pigeon</a>
     </li>
+    <li>
+      <a href="LECTURE6.html">Age-structured populations</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -288,55 +291,55 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left"></td>
 <td align="left">2/2/2017</td>
-<td align="left">LECTURE 2: Density-dependent growth; Maximum Sustainable Yield</td>
+<td align="left">LECTURE 2: Density-dependent growth</td>
 <td align="left">BCTD Chapter 2 (skim)</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">2/3/2017</td>
-<td align="left">LAB: More advanced population modeling with InsightMaker</td>
+<td align="left">LAB: Density-dependent populations in InsightMaker; maximum sustainable yield (MSY) and more</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 3</td>
 <td align="left">2/7/2017</td>
-<td align="left">LECTURE 1: Age-structured populations; Data needs for population ecology</td>
-<td align="left">Amstrup et al. Chap. 1</td>
+<td align="left">LECTURE 1: Passenger pigeon/Allee Effect</td>
+<td align="left">Gotelli Chapter 3</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">2/9/2017</td>
-<td align="left">LECTURE 2: Parameter estimation; capture-recapture data</td>
-<td align="left">Cooch and White Chaps 1,2</td>
+<td align="left">LECTURE 2: Age-structured populations; Stochasticity</td>
+<td align="left"><a href="lande.pdf">Lande 1992</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">2/10/2017</td>
-<td align="left">LAB: Estimate survival with open-population capture-recapture (program MARK)</td>
+<td align="left">LAB: Age-structured populations and stochasticity in InsightMaker</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 4</td>
 <td align="left">2/14/2017</td>
-<td align="left">LECTURE 1: Capture-recapture analysis (continued)</td>
-<td align="left">Cooch and White Chaps 3,4</td>
+<td align="left">LECTURE 1: Final projects; Small-population paradigm</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">2/16/2017</td>
-<td align="left">LECTURE 2: Population Viability Analysis</td>
+<td align="left">LECTURE 2: stage-structured populations; Matrix population models</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">2/17/2017</td>
-<td align="left">LAB: Estimate survival with open-population capture-recapture (program MARK) (continued)</td>
+<td align="left">LAB: PVA: Construct density-regulated, age-structured, stochastic population model in InsightMaker</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 5</td>
 <td align="left">2/21/2017</td>
-<td align="left">LECTURE 1: Population Viability Analysis (continued)</td>
+<td align="left">LECTURE 1: Population Viability Analysis; Small population paradigm</td>
 <td align="left">Brook et al. 2006</td>
 </tr>
 <tr class="even">
@@ -348,7 +351,7 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left"></td>
 <td align="left">2/24/2017</td>
-<td align="left">LAB: PVA: Construct density-regulated, stochastic population model in InsightMaker</td>
+<td align="left">LAB: Sensitivity testing, elasticity analysis</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
@@ -366,7 +369,7 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/3/2017</td>
-<td align="left">LAB: PVA lab (continued): scenario testing, sensitivity analysis</td>
+<td align="left">LAB: work on final projects</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
@@ -533,12 +536,17 @@ $(document).ready(function () {
 </tr>
 <tr class="even">
 <td align="left">Week 16</td>
-<td align="left">TBD</td>
-<td align="left">FINAL EXAM</td>
+<td align="left">5/16/2017</td>
+<td align="left">FINAL EXAM (2:30 PM)</td>
 <td align="left"></td>
 </tr>
 </tbody>
 </table>
+<pre><code>                  OTHER TOPICS                                                                                                           OTHER READINGS               
+                  Parameter estimation; capture-recapture data                                                                           Amstrup et al. Chap. 1       
+                  Estimate survival with open-population capture-recapture (program MARK)                                                Cooch and White Chaps 1,2    
+                  Estimate survival with open-population capture-recapture (program MARK) (continued)                                    Cooch and White Chaps 3,4    
+                  Capture-recapture analysis  (continued)                                                                                                             </code></pre>
 
 
 
